Fix image distortion in small window

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ div#image-container img {
   max-width: 100%;
   max-height: 100%;
   min-height: 256px;
+  object-fit: contain;
 }
 
 /* IMAGE PREVIEW - GENERAL MESSAGE */
